--- a/Examples/Stereo-Inertial/RealSense_D435i.yaml
+++ b/Examples/Stereo-Inertial/RealSense_D435i.yaml
@@ -5,15 +5,49 @@
 #--------------------------------------------------------------------------------------------
 File.version: "1.0"
 
-Camera.type: "Rectified"
+Camera.type: "PinHole"
 
-# Rectified Camera calibration (OpenCV)
-Camera1.fx: 382.613
-Camera1.fy: 382.613
-Camera1.cx: 320.183
-Camera1.cy: 236.455
+# Rectified Camera calibration and distortion parameters (OpenCV)
+Camera1.fx: 393.83372195014
+Camera1.fy: 393.5142578625567
+Camera1.cx: 323.41500704616675
+Camera1.cy: 233.14763954717986
 
-Stereo.b: 0.0499585
+Stereo.b: 0.0500614121556282
+
+# distortion parameters
+Camera1.k1: 0.011827931955951686
+Camera1.k2: -0.006640593139407507
+Camera1.p1: -0.002598950095099216
+Camera1.p2: 0.00010859505191597918
+
+Camera2.fx: 393.83372195014
+Camera2.fy: 393.5142578625567
+Camera2.cx: 323.41500704616675
+Camera2.cy: 233.14763954717986
+
+
+
+#Stereo.b: 0.0500614121556282
+
+# distortion parameters
+Camera2.k1: 0.011827931955951686
+Camera2.k2: -0.006640593139407507
+Camera2.p1: -0.002598950095099216
+Camera2.p2: 0.00010859505191597918
+
+Camera1.k3: 0.0
+Camera2.k3: 0.0
+
+Stereo.T_c1_c2: !!opencv-matrix
+   rows: 4
+   cols: 4
+   dt: f
+   data: [1.0, 0.0, 0.0, 0.0500614121556282,
+          0.0, 1.0, 0.0, 0.0,
+          0.0, 0.0, 1.0, 0.0,
+          0.0, 0.0, 0.0, 1.0]
+
 
 # Camera resolution
 Camera.width: 640
@@ -28,31 +62,11 @@ Camera.RGB: 1
 # Close/Far threshold. Baseline times.
 Stereo.ThDepth: 40.0
 
-# Transformation from body-frame (imu) to left camera
-IMU.T_b_c1: !!opencv-matrix
-   rows: 4
-   cols: 4
-   dt: f
-   data: [1.0, 0.0, 0.0, -0.005,
-          0.0, 1.0, 0.0, -0.005,
-          0.0, 0.0, 1.0, 0.0117,
-          0.0, 0.0, 0.0, 1.0]
-
-# Do not insert KFs when recently lost
-IMU.InsertKFsWhenLost: 0
-
-# IMU noise (Use those from VINS-mono)
-IMU.NoiseGyro: 1e-3 # 2.44e-4 #1e-3 # rad/s^0.5
-IMU.NoiseAcc: 1e-2 # 1.47e-3 #1e-2 # m/s^1.5
-IMU.GyroWalk: 1e-6 # rad/s^1.5
-IMU.AccWalk: 1e-4 # m/s^2.5
-IMU.Frequency: 200.0
-
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1250
+ORBextractor.nFeatures: 2000
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
